tests/ui/impl-trait/method-resolution4.next.stderr
error[E0282]: type annotations needed
  --> $DIR/method-resolution4.rs:13:9
   |
LL |         foo(false).next().unwrap();
   |         ^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
